--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -8,7 +8,8 @@
   {% include socialshare.html %}
 
   <!-- Icons -->
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.4.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@2.4.0/fonts/remixicon.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.4.0/fonts/remixicon.css"></noscript>
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
