--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -14,6 +14,10 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
 
+  <!-- Fonts  -->
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
+
+
   <!-- Analytics -->
   {% include analytics.html %}
 </head>
