--- a/src/_scss/_settings.scss
+++ b/src/_scss/_settings.scss
@@ -45,6 +45,10 @@ $green: #28a745 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
 
+$kettle-black-100: #1a1a1a;
+$kettle-gray-100: #f8f8f8;
+$salmon: #e96f73;
+
 $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
