--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,1 +1,19 @@
-<footer id="pageFooter"></footer>
+<footer id="pageFooter">
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      [ KETTLE LOGO]
+    </div>
+    <div class="col-6">
+      <ul>
+        <li><a href="">Our Solutions</a></li>
+        <li><a href="">Kettle Techonology</a></li>
+        <li><a href="">Our Team</a></li>
+        <li><a href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SBDWEZ2MHBVN0xHb2Y3akwyc3FVZlVwZ2stdDQxWTlvaqN0aWTZIFdYVGV3TmFISW82V0Rlcl9lYmtaTVcxay1hTEp6M1d0o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+</footer>
