--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,24 +1,17 @@
 <header id="pageHeader" class="bg-dark text-white">
   <div class="container">
     <nav id="mainnav" class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="/">{{ site.title }}</a>
+      <a class="navbar-brand" href="/">[ KETTLE LOGO ]</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primarynav" aria-controls="primarynav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse justify-content-md-end" id="primarynav">
         <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Examples
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              {% for example in site.examples %}
-                <a class="dropdown-item" href="{{ example.url }}">{{ example.title }}</a>
-              {% endfor %}
-            </div>
-          </li>
+          <li class="nav-item "><a class="nav-link" href="#">Our Solutions</a></li>
+          <li class="nav-item "><a class="nav-link" href="#">Kettle Technology</a></li>
+          <li class="nav-item "><a class="nav-link" href="#">Our Team</a></li>
+          <li class="nav-item "><a class="nav-link" href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SBDWEZ2MHBVN0xHb2Y3akwyc3FVZlVwZ2stdDQxWTlvaqN0aWTZIFdYVGV3TmFISW82V0Rlcl9lYmtaTVcxay1hTEp6M1d0o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
         </ul>
       </div>
     </nav>
