--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,8 +1,8 @@
 ---
 ---
+
 // Fonts
 // @import url("https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700,Spectral:400,400i,500i,600,600i&display=swap");
-
 
 @import "settings";
 @import "vendor/bootstrap/scss/bootstrap"; // Copied from node_modules and committed to source to allow Bootstrap to compile during build
@@ -15,8 +15,12 @@
 @import "global/typography";
 @import "global/animations";
 
+// Components
+@import "components/navigation";
+
+// Pages
+@import "pages/home";
+
 // Vendor Specific
 @import "vendor/bootstrap";
 @import "vendor/cognito";
-
-
