--- a/src/_scss/_settings.scss
+++ b/src/_scss/_settings.scss
@@ -5,7 +5,7 @@
 
 // Color system
 
-$white: #fff !default;
+$white: #f8f8f8 !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
@@ -40,7 +40,7 @@ $purple: #6f42c1 !default;
 $pink: #e83e8c !default;
 $red: #dc3545 !default;
 $orange: #fd7e14 !default;
-$yellow: #ffc107 !default;
+$yellow: #fea973 !default;
 $green: #28a745 !default;
 $teal: #20c997 !default;
 $cyan: #17a2b8 !default;
@@ -216,7 +216,6 @@ $container-max-widths: (
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1300px,
 ) !default;
 
 // Grid columns
