--- a/src/_scss/global/_utilities.scss
+++ b/src/_scss/global/_utilities.scss
@@ -196,6 +196,10 @@
   background-color: $kettle-gray-100 !important;
 }
 
+.bg-orange {
+  background-color: $yellow !important;
+}
+
 .bg-black {
   background-color: $kettle-black-100 !important;
   color: $white !important;
@@ -225,9 +229,18 @@
   box-shadow: 0px 2px 6px #76767629;
 
   .team-photo {
+    background-image: url(/img/images/team-headshot-andrew.jpg);
+    background-position: center center;
+    min-width: 350px;
+    min-height: 350px;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
-  .team-bio {
+  .bio-wrapper {
     border-top: 5px solid orange;
-    padding: 25px;
+
+    .team-bio {
+      padding: 30px;
+    }
   }
 }
