--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -33,3 +33,28 @@
     }
   }
 }
+
+#kettle-tablet-wrapper {
+  position: relative;
+  padding: 40% 0;
+  #kettle-tablet {
+    position: absolute;
+    width: 1000px;
+    top: -110px;
+    right: -55%;
+  }
+}
+
+#contact-wrapper {
+  // background-color: $kettle-black-100;
+  background: url(/img/contact-bg.svg) center center;
+  background-size: cover;
+  min-height: 325px;
+  color: $white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  h1 {
+    font-weight: 400;
+  }
+}
