--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,11 +1,14 @@
 <footer id="pageFooter">
 <div class="container">
-  <div class="row">
-    <div class="col-6">
-      [ KETTLE LOGO]
+  <div class="row d-flex centered justify-content-md-between ">
+    <div class="col-8 col-md-2  centered">
+      <img
+      class="img-fluid p-3 p-md-0"
+      src="/img/logos/kettle-id-full-color-vert.svg"
+      />
     </div>
-    <div class="col-6">
-      <ul>
+    <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end">
+      <ul class="mt-3 mt-md-0 pl-0 text-center text-md-right">
         <li><a href="">Our Solutions</a></li>
         <li><a href="">Kettle Techonology</a></li>
         <li><a href="">Our Team</a></li>
