--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="pageHeader" class="">
   <div class="container">
-    <nav id="mainnav" class="navbar navbar-expand-md navbar-dark">
+    <nav id="mainnav" class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="/">
       <img
       alt="Kettle logo"
@@ -13,9 +13,9 @@
 
       <div class="collapse navbar-collapse justify-content-md-end" id="primarynav">
         <ul class="navbar-nav">
-          <li class="nav-item "><a class="nav-link" href="#">Our Solutions</a></li>
-          <li class="nav-item "><a class="nav-link" href="#">Kettle Technology</a></li>
-          <li class="nav-item "><a class="nav-link" href="#">Our Team</a></li>
+          <li class="nav-item "><a class="nav-link" href="#our-solutions">Our Solutions</a></li>
+          <li class="nav-item "><a class="nav-link" href="#kettle-technology">Kettle Technology</a></li>
+          <li class="nav-item "><a class="nav-link" href="#our-team">Our Team</a></li>
           <li class="nav-item "><a class="nav-link" id="loginButton" href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SBDWEZ2MHBVN0xHb2Y3akwyc3FVZlVwZ2stdDQxWTlvaqN0aWTZIFdYVGV3TmFISW82V0Rlcl9lYmtaTVcxay1hTEp6M1d0o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
         </ul>
       </div>
