--- a/src/_scss/_settings.scss
+++ b/src/_scss/_settings.scss
@@ -5,7 +5,8 @@
 
 // Color system
 
-$white: #f8f8f8 !default;
+// $white: #f8f8f8 !default;
+$white: #fff !default;
 $gray-100: #f8f9fa !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
