--- a/src/_scss/components/_navigation.scss
+++ b/src/_scss/components/_navigation.scss
@@ -17,19 +17,48 @@
             color: $kettle-black-100;
             font-size: 1rem;
             padding: 20px 30px;
+            transition: 0.2s;
+            overflow: hidden;
+            position: relative;
+            &:hover {
+              color: $salmon;
+              text-decoration: none;
+            }
+            &:before {
+              content: "";
+              position: absolute;
+              left: 0;
+              bottom: 0;
+              width: 100%;
+              height: 1px;
+              background: $salmon;
+              transform: translateX(-100%);
+              transition: transform 0.5s ease;
+            }
+            &:hover:before {
+              transform: translateX(0);
+            }
           }
+
           #loginButton {
             background: rgb(185, 0, 110);
-            background: linear-gradient(90deg, rgba(185, 0, 110, 1) 0%, rgba(255, 218, 97, 1) 100%);
+            background: linear-gradient(
+              90deg,
+              rgba(185, 0, 110, 1) 0%,
+              rgba(233, 111, 115, 1) 53%,
+              rgba(254, 169, 115, 1) 100%
+            );
             color: $white;
             margin-left: 20px;
-            transition: 0.2s;
-            &:hover {
-              background: linear-gradient(90deg, rgba(185, 0, 110, 1) 10%, rgba(255, 218, 97, 1) 90%);
-            }
+          }
+          &:before {
+            height: 0px !important;
           }
         }
       }
     }
   }
+}
+
+@media only screen and (max-width: 600px) {
 }
