--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -58,3 +58,11 @@
     font-weight: 400;
   }
 }
+
+#how-reinsurance-works {
+  box-shadow: 0px 3px 8px #00000010;
+  background-color: $white !important;
+  .wrapper {
+    border-left: 1px dotted $kettle-gray-100;
+  }
+}
