--- a/src/_scss/components/_form.scss
+++ b/src/_scss/components/_form.scss
@@ -12,6 +12,12 @@
       margin-right: -55px;
       padding: 0px;
       color: $white;
+      background: url(/img/close.png) no-repeat center;
+      background-size: cover;
+      transition: 0.2s;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
     .modal-body {
       background-color: $white !important;
