--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -77,23 +77,29 @@
   .stage-step {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     img {
       margin-bottom: 50px;
     }
   }
   #step-1 {
-    margin-top: 200px;
+    margin-top: 100px;
+    margin-bottom: 0px;
   }
   #step-2 {
-    margin-top: 150px;
+    margin-top: 75px;
+    margin-bottom: 25px;
   }
   #step-3 {
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   #step-4 {
-    margin-top: 50px;
+    margin-top: 25px;
+    margin-bottom: 75px;
   }
   #step-5 {
     margin-top: 0px;
+    margin-bottom: 100px;
   }
 }
