--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="pageHeader" class="">
-  <div class="container">
+  <div class="container px-0 px-med-auto mx-0 mx-md-auto" style="max-width: auto;">
     <nav id="mainnav" class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="/">
       <img
