--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -6,3 +6,5 @@
   defer></script>
 
 <script src="{{ '/js/main.js' | prepend: site.baseurl }}" defer></script>
+
+<script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
