--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -37,22 +37,59 @@
 }
 
 #kettle-tablet-wrapper {
-  position: relative;
-  padding: 20px 0;
   #kettle-tablet {
+    width: 400px;
     position: absolute;
-    // width: 800px;
-    // top: -100px;
-    // right: -50%;
     z-index: 1;
   }
-  video {
+}
+#kettle-video-wrapper {
+  #kettle-video {
+    margin-left: 27px;
+    margin-top: 25px;
+    width: 346px;
     position: absolute;
-    max-width: 100%;
-    height: auto;
-    left: 47px;
-    top: 62px;
-    z-index: 0;
+  }
+
+  // max-width: 100%;
+  // height: auto;
+  // left: 47px;
+  // top: 62px;
+  // z-index: 0;
+}
+
+.project__mockup {
+  padding: 4em 3em;
+  position: relative;
+  margin: 0 auto;
+}
+.iphone {
+  margin: 0 auto;
+  // perspective: 800px;
+  background-image: url("/img/displays/kettle-tech-tablet-display.png");
+  height: 600px;
+  width: 800px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  &__inner {
+    width: 665px;
+    position: relative;
+    float: left;
+    padding-top: 50px;
+    padding-left: 58px;
+    transform-origin: center;
+    img {
+      display: none;
+    }
+    video,
+    img {
+      height: 100%;
+      width: 100%;
+    }
+    video::-webkit-media-controls {
+      display: none;
+    }
   }
 }
 
@@ -111,7 +148,7 @@
   #intro-wrapper {
     #comp-wrapper {
       video {
-        width: 456px;
+        width: 860px;
         height: 400px;
         position: absolute;
         left: -41px;
@@ -119,6 +156,15 @@
         z-index: 0;
         transform: perspective(11cm) rotateX(6deg) rotateY(-16deg) skew(-5deg, -3deg);
       }
+    }
+  }
+  .iphone {
+    width: 1000px;
+    height: 800px;
+    &__inner {
+      width: 860px;
+      padding-top: 63px;
+      padding-left: 75px;
     }
   }
 }
