--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -111,36 +111,14 @@
   box-shadow: 0px 3px 8px #00000010;
   background-color: $white !important;
 
-  .wrapper {
-    border-left: 1px dotted $kettle-gray-100;
-  }
-  .stage-step {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    img {
-      // margin-bottom: 50px;
-    }
-  }
-  // #step-1 {
-  //   margin-top: 100px;
-  //   margin-bottom: 0px;
-  // }
-  // #step-2 {
-  //   margin-top: 75px;
-  //   margin-bottom: 25px;
-  // }
-  // #step-3 {
-  //   margin-top: 50px;
-  //   margin-bottom: 50px;
-  // }
-  // #step-4 {
-  //   margin-top: 25px;
-  //   margin-bottom: 75px;
-  // }
-  // #step-5 {
-  //   margin-top: 0px;
-  //   margin-bottom: 100px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  // .risk-wrapper {
+  //   background-image: url(/img/reinsurance/kettle-reinsurance-graphic-flow-line.svg);
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  //   background-position: center top;
   // }
 }
 
@@ -165,6 +143,31 @@
       width: 860px;
       padding-top: 63px;
       padding-left: 75px;
+    }
+  }
+}
+@media only screen and (min-width: 991px) {
+  #how-reinsurance-works {
+    background-image: url(/img/backgrounds/risk-bg.svg);
+    #step-1 {
+      padding-top: 100px;
+      // margin-bottom: 0px;
+    }
+    #step-2 {
+      padding-top: 75px;
+      // margin-bottom: 25px;
+    }
+    #step-3 {
+      padding-top: 50px;
+      // margin-bottom: 50px;
+    }
+    #step-4 {
+      padding-top: 25px;
+      // margin-bottom: 75px;
+    }
+    #step-5 {
+      padding-top: 0px;
+      // margin-bottom: 100px;
     }
   }
 }
