--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -73,7 +73,7 @@
   background-repeat: no-repeat;
   position: relative;
   &__inner {
-    width: 665px;
+    width: 731px;
     position: relative;
     float: left;
     padding-top: 50px;
@@ -86,6 +86,9 @@
     img {
       height: 100%;
       width: 100%;
+    }
+    video {
+      border-radius: 10px;
     }
     video::-webkit-media-controls {
       display: none;
@@ -122,6 +125,29 @@
   // }
 }
 
+@media only screen and (min-width: 991px) {
+  #how-reinsurance-works {
+    background-image: url(/img/backgrounds/risk-bg-md.svg);
+    img {
+      margin-left: -50px;
+    }
+    #step-1 {
+      padding-top: 100px;
+    }
+    #step-2 {
+      padding-top: 75px;
+    }
+    #step-3 {
+      padding-top: 50px;
+    }
+    #step-4 {
+      padding-top: 25px;
+    }
+    #step-5 {
+      padding-top: 0px;
+    }
+  }
+}
 @media only screen and (min-width: 1200px) {
   #intro-wrapper {
     #comp-wrapper {
@@ -140,40 +166,16 @@
     width: 1000px;
     height: 800px;
     &__inner {
-      width: 860px;
+      width: 913px;
       padding-top: 63px;
       padding-left: 75px;
     }
   }
-}
-@media only screen and (min-width: 991px) {
   #how-reinsurance-works {
     background-image: url(/img/backgrounds/risk-bg.svg);
-    img {
-      margin-left: -50px;
-    }
-    #step-1 {
-      padding-top: 100px;
-      // margin-bottom: 0px;
-    }
-    #step-2 {
-      padding-top: 75px;
-      // margin-bottom: 25px;
-    }
-    #step-3 {
-      padding-top: 50px;
-      // margin-bottom: 50px;
-    }
-    #step-4 {
-      padding-top: 25px;
-      // margin-bottom: 75px;
-    }
-    #step-5 {
-      padding-top: 0px;
-      // margin-bottom: 100px;
-    }
   }
 }
+
 @media only screen and (max-width: 991px) {
   #intro-wrapper {
     #comp-wrapper {
@@ -191,6 +193,27 @@
         transform: perspective(11cm) rotateX(6deg) rotateY(-16deg) skew(-5deg, -3deg);
       }
     }
+  }
+  #how-reinsurance-works {
+    img {
+      margin-right: -50px;
+      z-index: 1;
+    }
+    // #step-1 {
+    //   padding-top: 100px;
+    // }
+    // #step-2 {
+    //   padding-top: 75px;
+    // }
+    // #step-3 {
+    //   padding-top: 50px;
+    // }
+    // #step-4 {
+    //   padding-top: 25px;
+    // }
+    // #step-5 {
+    //   padding-top: 0px;
+    // }
   }
 }
 @media only screen and (max-width: 767px) {
