--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -279,6 +279,10 @@
       }
     }
   }
+  .iphone {
+    margin-left: 50px;
+    margin-top: -75px;
+  }
 }
 @media only screen and (max-width: 575px) {
   #intro-wrapper {
