--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -5,6 +5,24 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
   defer></script>
 
+
 <script src="{{ '/js/main.js' | prepend: site.baseurl }}" defer></script>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+<script defer>
+  var controller = new ScrollMagic.Controller();
+
+    $(".animate").each(function () {
+      var currentAnimation = this;
+
+      var scene = new ScrollMagic.Scene({
+        triggerElement: currentAnimation,
+        offset: -350,
+        reverse: false
+      })
+        .setClassToggle(currentAnimation, "active")
+        .addTo(controller);
+    });
+</script>
