--- a/src/_scss/global/_animations.scss
+++ b/src/_scss/global/_animations.scss
@@ -47,3 +47,32 @@
     background-position: 0% 50%;
   }
 }
+@keyframes textFadeUp {
+  from {
+    opacity: 0;
+    transform: translatey(25px);
+  }
+  to {
+    opacity: 1;
+    transform: translatey(0px);
+  }
+}
+
+.fade-up,
+.animate {
+  opacity: 0;
+  transition: 1s;
+}
+
+.fade-up {
+  &.active {
+    transform: translateY(0px);
+    animation: textFadeUp 1.2s;
+    animation-fill-mode: forwards;
+    @for $i from 1 through 20 {
+      &:nth-child(#{$i}) {
+        animation-delay: 0.2s * $i;
+      }
+    }
+  }
+}
