--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -1,10 +1,11 @@
 <!-- JS Dependencies -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous" defer></script>
+
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"
   defer></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
   defer></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js" defer></script>
 
 
 <script src="{{ '/js/main.js' | prepend: site.baseurl }}" defer></script>
@@ -20,7 +21,7 @@
 
       var scene = new ScrollMagic.Scene({
         triggerElement: currentAnimation,
-        offset: -350,
+        offset: -450,
         reverse: false
       })
         .setClassToggle(currentAnimation, "active")
