--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -9,10 +9,10 @@
     </div>
     <div class="col-12 col-md-4 d-flex justify-content-center justify-content-md-end">
       <ul class="mt-3 mt-md-0 pl-0 text-center text-md-right">
-        <li><a href="">Our Solutions</a></li>
-        <li><a href="">Kettle Techonology</a></li>
-        <li><a href="">Our Team</a></li>
-        <li><a href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SBDWEZ2MHBVN0xHb2Y3akwyc3FVZlVwZ2stdDQxWTlvaqN0aWTZIFdYVGV3TmFISW82V0Rlcl9lYmtaTVcxay1hTEp6M1d0o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
+        <li><a href="#our-solutions">Our Solutions</a></li>
+        <li><a href="#kettle-technology">Kettle Techonology</a></li>
+        <li><a href="#our-team">Our Team</a></li>
+        <li><a target="_blank" href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SB4VE41VlFadjEzWHZ0Ym5pT2RlcU1ZMENXQjhfeWtTdaN0aWTZIDBfQ0drVkt1dUJrbTJRUm9HV0U2MkJWNnV4aWpjQjI1o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
       </ul>
     </div>
   </div>
