--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -1,10 +1,9 @@
 <!-- JS Dependencies -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" crossorigin="anonymous" ></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous" ></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"
   defer></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"
   defer></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js" defer></script>
 
 
 <script src="{{ '/js/main.js' | prepend: site.baseurl }}" defer></script>
@@ -13,12 +12,11 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+
 <script defer>
   var controller = new ScrollMagic.Controller();
-
     $(".animate").each(function () {
       var currentAnimation = this;
-
       var scene = new ScrollMagic.Scene({
         triggerElement: currentAnimation,
         offset: -450,
@@ -27,4 +25,22 @@
         .setClassToggle(currentAnimation, "active")
         .addTo(controller);
     });
+</script>
+
+
+<script>
+  function startCounter() {
+    $('.counter').each(function (index) {
+      $(this).prop('Counter', 0).animate({
+        Counter: $(this).text()
+      }, {
+        duration: 2000,
+        easing: 'swing',
+        step: function (now) {
+          $(this).text(Math.round(now * 10) / 10);
+        }
+      });
+    });
+  }
+  startCounter();
 </script>
