--- a/src/_scss/pages/_home.scss
+++ b/src/_scss/pages/_home.scss
@@ -187,6 +187,9 @@
     #step-5 {
       padding-top: 0px;
     }
+    .risk-wrapper {
+      background-image: none;
+    }
   }
 }
 @media only screen and (min-width: 1200px) {
