--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -12,6 +12,7 @@
         <li><a href="#our-solutions">Our Solutions</a></li>
         <li><a href="#kettle-technology">Kettle Techonology</a></li>
         <li><a href="#our-team">Our Team</a></li>
+        <li><a target="_blank" href="https://apply.workable.com/kettle-2/">Careers</a></li>
         <li><a target="_blank" href="https://dev-1o3jlswz.auth0.com/u/login?state=g6Fo2SB4VE41VlFadjEzWHZ0Ym5pT2RlcU1ZMENXQjhfeWtTdaN0aWTZIDBfQ0drVkt1dUJrbTJRUm9HV0U2MkJWNnV4aWpjQjI1o2NpZNkgQ1VEOXRaTG55UERweHVqa0hZYmk4bU5rQ3BwWlF0VTc">Login</a></li>
       </ul>
     </div>
